[package]
repository = "https://github.com/SuperInstance/crate-graph"
name = "crate-graph"
version = "0.1.0"
edition = "2021"
description = "Dependency graph analysis for Rust crate fleets"
license = "MIT"

[dependencies]
petgraph = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
colored = "2"
clap = { version = "4", features = ["derive"] }

[[bin]]
name = "crate-graph"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3"
